--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "yarn run eslint && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "prettier:run": "prettier --write **/*.{ts,js,css,html}",
